--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,12 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
+            </intent-filter>
         </activity>
 
-        <service android:name=".MediaListenerService"
+        <service android:name=".service.MediaListenerService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
             android:exported="true">
@@ -52,9 +55,20 @@
         </service>
 
         <service
-            android:name=".AudioSyncService"
+            android:name=".service.AudioSyncService"
             android:foregroundServiceType="microphone"
             android:exported="false" />
+
+        <service
+            android:name=".service.LedTileService"
+            android:icon="@drawable/ic_tile_bulb"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
 
     </application>
 
